--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         www.hanstercek.com
      -->
     <meta charset="utf-8">
+    <title>Ellie Gan</title>
+    <meta name="description" content="Ellie Gan is a product coordinator with a passion for developing and launching new consumer products" />
+    <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
