--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <body class="faded">
     <div id="content-wrapper">
     <section id="main-content">
-        <h1>Hello, I'm <span class="em">Ellie</span>.</h1>
+        <h1>Hi, I'm <span class="em">Ellie</span>.</h1>
         <p>
             I launch new products at <a target="_blank" href="https://juicepress.com/">Juice Press</a>.<br />
-            I have experience <a href="https://casperandcoal.com/" target="_blank">taking products to market</a> and am passionate about <a href="#" target="_blank">building brands</a>.<br />
+            I have experience <a href="https://casperandcoal.com/" target="_blank">taking products to market</a> and am passionate about <a href="http://red-peak.com/" target="_blank">building brands</a>.<br />
             Read about my experience <a href="Ellie Gan Resume.pdf">here</a>.
             <div id="links">Check me out on <a href="https://www.linkedin.com/in/ellie-gan-911431b2/" target="_blank">LinkedIn</a>!</div>
         </p>
