--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      -->
     <meta charset="utf-8">
     <title>Ellie Gan</title>
-    <meta name="description" content="Ellie Gan is in Digital Strategy and Innovation with a passion for developing and launching new consumer products" />
+    <meta name="description" content="Ellie Gan is in Digital Strategy and Innovation with a passion for consumer brands & products." />
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
@@ -25,8 +25,7 @@
         <p>
             I launch new products at <a target="_blank" href="https://juicepress.com/">Juice Press</a> and create things like their <a target="_blank" href="https://juicepress.com/">website</a>.<br />
             I've brought an almost-dead <a target="_blank" href="https://juicepress.com/cleanses-email">cleanse program</a>. back to life & use transactional data to determine business strategy.<br />
-            I have experience <a href="https://casperandcoal.com/" target="_blank">taking products to market</a> and am passionate about <a href="http://red-peak.com/" target="_blank">building brands</a>.<br />
-            Read about my experience <a href="Ellie Gan Resume.pdf">here</a>.
+            I have experience <a href="https://casperandcoal.com/" target="_blank">building my own brand</a>. and taking products to market. <br />
             <div id="links">Find me on<a href="https://www.linkedin.com/in/ellie-gan-911431b2/" target="_blank">LinkedIn</a>!</div>
         </p>
     </section>
