--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- 
         Site by
-        Hans Tercek 2018
+        Hans Shmercek 2018
         www.hanstercek.com
      -->
     <meta charset="utf-8">
@@ -23,9 +23,9 @@
     <section id="main-content">
         <h1>Hi, I'm <span class="em">Ellie</span>.</h1>
         <p>
-            I launch new products at <a target="_blank" href="https://juicepress.com/">Juice Press</a> and create things like their <a target="_blank" href="https://juicepress.com/">website</a>.<br />
-            I've brought an almost-dead <a target="_blank" href="https://juicepress.com/cleanses-email">cleanse program</a>. back to life & use transactional data to determine business strategy.<br />
-            I have experience <a href="https://casperandcoal.com/" target="_blank">building my own brand</a>. and taking products to market. <br />
+            I launch new products at <a target="_blank" href="https://juicepress.com/">Juice Press</a> and create things like their <a target="_blank" href="https://juicepress.com/">website</a>. While here, I've brought an almost-dead <a target="_blank" href="https://juicepress.com/cleanses-email">cleanse program</a> back to life & use transactional data to determine business strategy.<br />
+            <br />
+            I have experience <a href="https://casperandcoal.com/" target="_blank">building my own brand</a> and taking products to market. <br />
             <div id="links">Find me on<a href="https://www.linkedin.com/in/ellie-gan-911431b2/" target="_blank">LinkedIn</a>!</div>
         </p>
     </section>
