--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>
             I launch new products at <a target="_blank" href="https://juicepress.com/">Juice Press</a> and create things like their <a target="_blank" href="https://juicepress.com/">website</a>. While here, I've brought an almost-dead <a target="_blank" href="https://juicepress.com/cleanses-email">cleanse program</a> back to life & use transactional data to determine business strategy.<br />
             <br />
-            I'm passionate for consumer products & brands and have experience <a href="https://casperandcoal.com/" target="_blank">building my own brand</a> and developing products for the market. <br />
+            I'm passionate about consumer products & brands and have experience <a href="https://casperandcoal.com/" target="_blank">building my own brand</a> and developing products for the market. <br />
             <div id="links">Find me on <a href="https://www.linkedin.com/in/ellie-gan-911431b2/" target="_blank">LinkedIn</a>!</div>
         </p>
     </section>
