--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      -->
     <meta charset="utf-8">
     <title>Ellie Gan</title>
-    <meta name="description" content="Ellie Gan is in Digital Strategy and Innovation with a passion for consumer brands & products." />
+    <meta name="description" content="Ellie Gan works on Digital Strategy and Innovation for Juice Press and has a passion for consumer brands & products." />
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
