--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="shortcut icon" href="icons/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Archivo+Black|Archivo+Narrow:400i|Oswald:500|Teko&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Archivo+Black|Archivo+Narrow:400i|Oswald:500|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css" type="text/css" />
     <link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
