--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="faded">
     <div id="content-wrapper">
     <section id="main-content">
-        <h1>Hi, I'm <span class="em">Ellie</span>.</h1>
+        <h1><span class="em">Ellie Gan</span>.</h1>
         <p>
             I launch new products at <a target="_blank" href="https://juicepress.com/">Juice Press</a> and create things like their <a target="_blank" href="https://juicepress.com/">website</a>. While here, I've brought an almost-dead <a target="_blank" href="https://juicepress.com/cleanses-email">cleanse program</a> back to life & use transactional data to determine business strategy.<br />
             <br />
