--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="main-content">
         <h1><span class="em">Ellie Gan</span></h1>
         <p>
-            Nice to meet you. I run digital strategy at <a target="_blank" href="https://juicepress.com/">Juice Press</a> and create things like their <a target="_blank" href="https://juicepress.com/">website</a>, while managing their marketing tech stack. </br>
+            I run digital strategy at <a target="_blank" href="https://juicepress.com/">Juice Press</a>, a department I created to enhance our marketing strategy through data capture. While here, I've built out a robust marketing tech stack to manage, automate, and drive revenue. I've created assets like their website <a target="_blank" href="https://juicepress.com/">website</a>. </br>
         While here, I've brought an almost-dead <a target="_blank" href="https://juicepress.com/cleanses-email">cleanse program</a> back to life & use transactional data to determine business strategy.<br />
             <br />
             I'm passionate about consumer products & brands and have experience <a href="https://casperandcoal.com/" target="_blank">building my own brand</a> and developing products for the market. <br />
