--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     <section id="main-content">
         <h1><span class="em">Ellie Gan</span></h1>
         <p>
-            I run digital strategy at <a target="_blank" href="https://juicepress.com/">Juice Press</a>, a department I created to enhance our marketing strategy through data capture. While here, I've built out a robust marketing tech stack to manage, automate, and drive revenue. I've created assets like their website <a target="_blank" href="https://juicepress.com/">website</a>. </br>
-        While here, I've brought an almost-dead <a target="_blank" href="https://juicepress.com/cleanses-email">cleanse program</a> back to life & use transactional data to determine business strategy.<br />
-            <br />
-            I'm passionate about consumer products & brands and have experience <a href="https://casperandcoal.com/" target="_blank">building my own brand</a> and developing products for the market. <br />
+            I run digital strategy at <a target="_blank" href="https://juicepress.com/">Juice Press</a>, a department I created to enhance marketing strategy through strong data capture. <br />
+            While here, I've built out a robust marketing tech stack to enhance business strategy and innovation. I've created assets like their <a target="_blank" href="https://juicepress.com/">website</a> and Loyalty Program. </br>
+        
+        <br />
+            I founded <a target="_blank" href="casperandcoal.com">Casper & Coal</a>, a DTC brand, to get hands on experience devloping a business and product line. 
             <div id="links">Find me on <a href="https://www.linkedin.com/in/ellie-gan-911431b2/" target="_blank">LinkedIn</a>!</div>
         </p>
     </section>
