--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <section id="main-content">
         <h1><span class="em">Ellie Gan</span></h1>
         <p>
-            I run digital strategy at <a target="_blank" href="https://juicepress.com/">Juice Press</a>, a department I've created to enhance marketing strategy through strong data capture. <br />
-            While here, I've built out a robust marketing tech stack to inform and enhance business strategy. I've created assets like their <a target="_blank" href="https://juicepress.com/">website</a>, <a target="_blank" href="https://juicepress.com/rewards">Loyalty Program</a>, and <a target="_blank" href="https://juicepress.com/?extole_zone_name=share_experience&extole_labels=refer-a-friend">Referral Program</a>. </br>
+            I run digital strategy at <a target="_blank" href="https://juicepress.com/">Juice Press</a>, a department I've created to enhance marketing strategy through strong data analysis. <br />
+            While here, I've built out a robust marketing tech stack to inform and enhance business strategy. I've created assets like their <a target="_blank" href="https://juicepress.com/">website</a>, <a target="_blank" href="https://juicepress.com/rewards">data-driven loyalty program</a>, and <a target="_blank" href="https://juicepress.com/?extole_zone_name=share_experience&extole_labels=refer-a-friend">referral program</a>. </br>
         
         <br />
             I founded <a target="_blank" href="casperandcoal.com">Casper & Coal</a>, a DTC brand, to get hands on experience devloping a business and product line, and scaled it to become a successful small business. 
