--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             While here, I've built out a robust marketing tech stack to inform and enhance business strategy. I've created assets like their <a target="_blank" href="https://juicepress.com/">website</a>, <a target="_blank" href="https://juicepress.com/rewards">data-driven loyalty program</a>, and <a target="_blank" href="https://juicepress.com/?extole_zone_name=share_experience&extole_labels=refer-a-friend">referral program</a>. </br>
         
         <br />
-            I founded <a target="_blank" href="casperandcoal.com">Casper & Coal</a>, a DTC brand, to get hands on experience devloping a business and product line, and scaled it to become a successful small business. 
+            I founded <a target="_blank" href="https://casperandcoal.com">Casper & Coal</a>, a DTC brand, to get hands on experience devloping a business and product line, and scaled it to become a successful small business. 
             <div id="links">Find me on <a href="https://www.linkedin.com/in/ellie-gan-911431b2/" target="_blank">LinkedIn</a>!</div>
         </p>
     </section>
